// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Error Banner Component > Provided a message > it renders a loading banner 1`] = `
<div>
  <div
    class="justify-content-center mt-5 row"
  >
    <div
      class="d-flex justify-content-center col-12"
    >
      <div
        class="spinner-border text-primary"
        data-testid="loading-banner__spinner"
      />
    </div>
  </div>
</div>
`;

exports[`Error Banner Component > Provided a test id > it renders a loading banner 1`] = `
<div>
  <div
    class="justify-content-center mt-5 row"
  >
    <div
      class="d-flex justify-content-center col-12"
    >
      <div
        class="spinner-border text-primary"
        data-testid="test-spinner"
      />
    </div>
  </div>
</div>
`;
